[package]
name = "sharextended"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
toml = "0.5.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.86"
clap = { version = "4.0.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
ansi_term = "0.12.1"
indicatif = "0.17.1"
dialoguer = "0.10.2"
tinyfiledialogs = "3.9.1"
open = "3.0.3"
lazy_static = "1.4.0"
console = "0.15.2"
futures = "0.3.24"
directories = "4.0.1"